--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=quiz
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ekornya
+spring.datasource.url=jdbc:mysql://mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=QDTrNLgwSpNBrxJeLoQoIqufDobLtIUS
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
